# ACTs

./: .gitignore  ACTs_UI_Design.html  ACTs_构建文档.md  ACTs_构建文档_精简版.md  CLAUDE.md  README.md  build.md  claude.bat  codegraph_index.bat  codegraph_sync.bat  main.py  opencode.jsonc  requirements.txt  test.docx  test.html  test.txt
.codegraph/: daemon.pid
.opencode/agent/: implementer.md  reviewer.md
agent_engine/: README.md  __init__.py  cli.py  config.py  engine.py  llm.py  memory.py  observe.py  pyproject.toml  reflect.py  safety.py  state.py  tools.py  types.py
agent_engine/builtin_tools/: __init__.py  calculator.py  code_exec.py  files.py  search.py
agent_engine/tests/: conftest.py  test_engine.py  test_llm.py  test_memory.py  test_reflect.py  test_safety.py  test_state.py  test_tools.py  test_types.py
docs/: architecture.md  decision_engine_diagram.html  index.md
docs/decisions/: 001-yaml-first-persistence.md  002-llm-adapter-pattern.md  003-vault-api-key-management.md  004-webengine-katex-chat-rendering.md  005-session-message-format.md  006-context-compression.md  007-threading-model.md
docs/diagrams/: data-flow.md
procession/: 工作进度_2026-05-25.md
scripts/: fetch_highlight.py  fetch_katex.py  fetch_mathjax.py  test_markdown_math.py  track_claude.py
src/core/: agent.py  models.py  session.py  skill.py  skill_import.py  team.py  (+2 more)
tests/: test_agent.py  test_count_loc.py  test_db.py  test_latex_streaming_visual.py  test_llm.py  test_parse_state_machine.py  test_session.py  test_storage.py
workspace/: README.md  config.yaml  sinx_analysis.md
(+52 files in other folders)
